--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "node --experimental-vm-modules ./node_modules/jest/bin/jest.js",
     "linter": "node ./node_modules/eslint/bin/eslint.js .",
     "linter-fix": "node ./node_modules/eslint/bin/eslint.js . --fix",
-    "server": "node ./lib/server.js"
+    "server": "node ./models/server.js"
   },
   "author": "",
   "license": "ISC",
